Added Journals to the backend